--- a/idsteptodeletetest/pom.xml
+++ b/idsteptodeletetest/pom.xml
@@ -29,10 +29,45 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!--<dependency> spring boot 1
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.tomcat</groupId>
+                    <artifactId>tomcat-jdbc</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>-->
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <!--<dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.2.0.Final</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>oracle.ojdbc</groupId>
+            <artifactId>ojdbc</artifactId>
+            <version>12.1.0.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>oracle.ojdbc</groupId>
+            <artifactId>xdb6</artifactId>
+            <version>12.1.0.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>oracle.ojdbc</groupId>
+            <artifactId>xmlparserv2</artifactId>
+            <version>11.2.0.3.0</version>
         </dependency>
 
         <dependency>
@@ -58,6 +93,7 @@
         </dependency>
 
 
+
         <!--<dependency>
             <groupId>fr.abes</groupId>
             <artifactId>testrestcontrollerinterface</artifactId>
@@ -65,6 +101,26 @@
             <scope>compile</scope>
         </dependency>-->
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>artifactory-public</id>
+            <name>artifactory-public</name>
+            <url>https://artifactory.abes.fr/artifactory/maven-public/</url>
+        </repository>
+        <repository>
+            <id>artifactory-public-ext</id>
+            <name>artifactory-public-ext</name>
+            <url>https://artifactory.abes.fr/artifactory/ext-release-local/</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>artifactory-public</id>
+            <name>artifactory-public</name>
+            <url>https://artifactory.abes.fr/artifactory/maven-public/</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <build>
         <plugins>
